# snowflake-synthesizer

./: .gitignore  CHANGELOG.md  LICENSE  README.md  config.yaml  pyproject.toml  test_features.yaml
.github/workflows/: ci.yml  publish.yml
.venv-ci/: pyvenv.cfg
examples/: advanced_features.yaml  ecommerce.yaml  multi_schema.yaml  selfref_employees.yaml
scripts/: inspect_sql.py  live_smoke_test.sh  offline_e2e_test.py
src/sf_synth/: __init__.py  backend.py  cli.py  config.py  dag.py  discovery.py  engine.py  errors.py  report.py  ri.py  semantic.py  stats.py  validation.py
src/sf_synth/generators/: __init__.py  base.py  distribution.py  faker_udf.py  sql.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_snowflake.py
tests/unit/: __init__.py  test_config.py  test_dag.py  test_engine_sql.py  test_new_features.py  test_semantic.py
